[tool.poetry]
name = "crawl-rss"
version = "0.1.0"
description = ""
authors = ["Jamey Sharp <jamey@minilop.net>"]

[tool.poetry.dependencies]
python = "^3.7"
cachecontrol = "^0.12.6"
lockfile = "^0.12.2"
requests = "^2.23"
sqlalchemy = "^1.3"
alembic = "^1.4"
feedparser = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
