[tool.poetry]
name = "crawl-rss"
version = "0.1.0"
description = ""
authors = ["Jamey Sharp <jamey@minilop.net>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
feedparser = "^5.2"
html5lib = "^1.0"
lxml = "^4.5"
httpx = {extras = ["http2", "brotli"], version = "^0.14.3"}

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-black = "^0.3.10"
pytest-flakes = "^4.0.1"
pytest-mypy = "^0.7.0"
lxml-stubs = "^0.1.1"
sqlalchemy-stubs = "^0.3.0"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.pytest.ini_options]
addopts = "--black --flakes --mypy --doctest-modules"
testpaths = "crawl_rss"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
