[tool.poetry]
name = "crawl-rss"
version = "0.1.0"
description = ""
license = "AGPL-3.0-only"
authors = ["Jamey Sharp <jamey@minilop.net>"]
readme = "README.md"
include = ["alembic.ini", "migrations/**/*.py"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
feedparser = "^6.0"
httpx = {extras = ["http2", "brotli"], version = "^0.14.3"}
starlette = "^0.13.8"
uvicorn = "^0.11.8"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-alembic = "^0.2.5"
pytest-black = "^0.3.10"
pytest-cov = "^2.10.1"
pytest-flakes = "^4.0.1"
pytest-httpx = "^0.8.0"
pytest-mypy = "^0.7.0"
sqlalchemy-stubs = "^0.3.0"
black = {version = "^20.8b1", allow-prereleases = true}
coverage = {extras = ["toml"], version = "^5.2.1"}

[tool.pytest.ini_options]
addopts = """\
  --mypy \
  --test-alembic \
  --doctest-modules \
  --cov-report html --cov-report term:skip-covered --no-cov-on-fail \
"""
testpaths = "crawl_rss"

[tool.coverage.run]
source = ["crawl_rss"]
omit = ["*/test_*.py"]

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
